fixed styling on front page

--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
 						</div>
 						<div class="content">
 							<div class="inner">
+								<span class="image main small"><img class="circle" src="images/padgularsq.jpg" alt="" /></span>
 								<h1>Medicare Alex</h1>
 								<small><p>Father, Husband, and Medicare Expert</p></small>
 								<hr>
